[package]
name = "actix_1"
version = "0.1.0"
authors = ["fclinux"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web ="3.3.0"
actix-files = "0.5.0"
actix-session = "0.4"
actix-utils = "3.0.0"
env_logger = "0.8"
# futures-util = "0.3.14"
futures = "0.3.2"